--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Contact</h1>
+<h1>New Contact for  </h1>
 
 <form action="/contacts" method="post">
   <p>
@@ -13,9 +13,8 @@
     <label for="phone_number">Phone</label>
     <input type="text" name="phone_number" id="phone_number">
   </p>
-  <p>
-    <label for="company_id">Company</label>
-    <input type="text" name="company_id" id="company_id">
-  </p>
+
+  <input type="hidden" name="company_id" id="company_id" value="<% @company["company_id"]%>">
+
   <button>Submit</button>
 </form>
