--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,5 +2,20 @@
 
 <form action="/posts" method="post">
   <%# add form fields %>
+  <p>
+    <label for="author">Author</label>
+    <input type="text" name="author">
+  </p>
+  
+  <p>
+    <label for="body">Body</label>
+    <input type="text" name="body">
+  </p>
+
+  <p>
+    <label for="image">Image</label>
+    <input type="text" name="image">
+  </p>
+
   <button>Submit</button>
 </form>
